--- a/crispy-website/vercel.json
+++ b/crispy-website/vercel.json
@@ -19,6 +19,10 @@
         "dest": "/backend/$1"
       },
       {
+        "src": "/(.*).(js|css|map|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf)",
+        "dest": "/$1.$2"
+      },
+      {
         "src": "/(.*)",
         "dest": "/index.html"
       }
