--- a/crispy-website/vercel.json
+++ b/crispy-website/vercel.json
@@ -16,7 +16,7 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/backend/$1"
+        "dest": "backend/index.js"
       },
       {
         "src": "/(.*).(js|css|map|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf)",
