--- a/crispy-website/vercel.json
+++ b/crispy-website/vercel.json
@@ -20,7 +20,7 @@
       },
       {
         "src": "/images/(.*)",
-        "dest": "backend/images/$1" 
+        "dest": "public/images/$1" 
       },
       {
         "src": "/(.*).(js|css|map|json|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|otf)",
